--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.2",
   "description": "Function to create tests AB using analytics",
   "main": "index.js",
-  "author": "Renato Cassino",
+  "author": "Tacnoman - Renato Cassino",
+  "keywords": ["google", "analytics", "ab", "test", "javascript"],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tacnoman/googleAnalyticsAB.git"
+  },
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
