Coverage with codecov

--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "gulp": "^3.9.1",
     "gulp-uglify": "^3.0.0",
     "http-server": "^0.10.0",
+    "istanbul": "^0.4.5",
     "jscoverage": "^0.6.0",
-    "mocha": "^4.1.0",
+    "mocha": "^5.0.0",
+    "nyc": "^11.4.1",
     "pump": "^2.0.0"
   },
   "scripts": {
     "start": "http-server",
-    "test": "mocha -r jscoverage --covout=html test/",
+    "test": "mocha test/",
     "build": "gulp && mv dist/index.js dist/google-analytics-ab.min.js && cp index.js dist/google-analytics-ab.js",
+    "coverage": "istanbul cover _mocha",
     "lint": "eslint index.js"
   },
   "jest": {
