--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,7 @@ node_js:
   - "8.1.2"
   - "7.10.0"
   - "6.12.3"
-
+script:
+  - npm run coverage
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
